Now with initial 2024 	modified:   ChangeLog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023-12-08:  David Anderson
+    commit 6ddf8840633807106855bd370f2ade8ad3e63c8d
+
+    up to date with git log
+            modified:   ChangeLog
+
 2023-12-02:  David Anderson
     commit 51d13a789961ef3291af07c22c678745a1cd0fd6
 
