--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,32 @@
+2024-01-09:  David Anderson
+    commit 9b50acc287fd87d69c36c1bdc9c46a562e85fa20
+
+    Removing an unneeded ERROR
+    from a particular unimportant
+    corruption in elf sections resulted in four
+    things producing some useful results now.
+    And now we can read Metrowerks-produced
+    DWARF.
+
+    So new baseline executables.
+            modified:   dwarfdump-i386-freebsd.O
+            modified:   dwarfdump-macos.O
+            modified:   dwarfdump-s390.O
+            modified:   dwarfdump-x86_64-freebsd.O
+            modified:   dwarfdump-x86_64-ubuntu.O
+
+2024-01-06:  David Anderson
+    commit 535be9db18ff97fc966be878e392acd7653679f9
+
+    Now 2022 separated out properly.
+            new file:   ChangeLog2022
+
+2024-01-01:  David Anderson
+    commit 7fcb4d7f2772df4344c05316e03e6c84baef9984
+
+    Now just 2024.
+            modified:   ChangeLog
+
 2024-01-01:  David Anderson
     commit 5f0c74a80f9a323bd036dda74cc52ae8e5029984
 
